add websocket functionality and user controller
